# husarnet

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  compose.yml  go.work  go.work.sum  husarnet.cmake  version.txt
.github/: update-workflows.sh
builder/: Dockerfile  build.sh  compose.yml  down.sh  entrypoint.sh  gdb.sh  prepare-gh.sh  pull.sh  push.sh  shell.sh
cli/: .gitignore  TODO.md  actions_dashboard.go  api_calls.go  api_claim_command.go  api_types.go  api_utility_commands.go  auth.go  build.sh  command_groups.go  compound_commands.go  container.go  daemon_actions.go  daemon_api.go  daemon_binary.go  daemon_commands.go  daemon_service_commands.go  daemon_status.go  daemon_utility_commands.go  daemon_wait.go  dashbaord_api.go  dashboard_actions.go  dashboard_api.go  dashboard_auth.go  dashboard_commands.go  dashboard_device_commands.go  dashboard_group_commands.go  dashboard_token_commands.go  format.sh  genqlient.graphql  genqlient.yaml  go.mod  go.sum  main.go  messages.go  observer.go  pretty_print.go  requests.go  schema.graphql  service_commands.go  (+7 more)
common/: common.cmake  fstring.h  ipaddress.cpp  ipaddress.h  port.h  sockets.cpp  string_view.h  threads_port.h  util.cpp  util.h
core/: base_config.cpp  base_config.h  base_container.cpp  base_container.h  base_server.cpp  base_server.h  base_transports.cpp  base_transports.h  communication.md  compression_layer.cpp  compression_layer.h  config_storage.cpp  config_storage.h  configmanager.cpp  configmanager.h  configtable.h  core.cmake  device_id.h  dns_server.cpp  dns_server.h  encryption.md  filestorage.cpp  filestorage.h  gil.cpp  gil.h  hooks_manager.cpp  hooks_manager.h  husarnet.cmake  husarnet.cpp  husarnet.h  husarnet_config.h  husarnet_crypto.cpp  husarnet_crypto.h  husarnet_ip.h  husarnet_manager.cpp  husarnet_manager.h  husarnet_secure.cpp  husarnet_secure.h  husarnet_socket.h  identity.cpp  (+63 more)
daemon/: CMakeLists.txt  CMakePresets.json  arch_amd64.cmake  arch_arm64.cmake  arch_armhf.cmake  arch_i386.cmake  arch_ide.cmake  arch_macos_amd64.cmake  arch_macos_arm64.cmake  arch_riscv64.cmake  arch_win64.cmake  build.sh  daemon.cpp  format.sh  zig-ar.sh  zig-ranlib.sh
daemon/unix/: CMakeLists.txt  CMakePresets.json  arch_amd64.cmake  arch_arm64.cmake  arch_armhf.cmake  arch_riscv64.cmake
daemon/windows/: CMakeLists.txt  arch_win64.cmake  daemon.cpp
deploy/: deploy.sh  husarnet.repo  install.sh  repo.gpg  repo.key  update-deployers.sh
docs/: README.md
esp32/: Makefile  README.md  husarnet_main.cpp  main.cpp  partitions.csv  sdkconfig  sdkconfig.old
husarnet/: compression_layer.cpp  compression_layer.h  config_storage.cpp  config_storage.h  configtable_inmemory.cpp  configtable_inmemory.h  configtable_interface.h  configtable_persistent.cpp  configtable_persistent.h  device_id.h  dns_server.cpp  dns_server.h  fstring.h  gil.cpp  gil.h  global_lock.cpp  global_lock.h  husarnet.cmake  husarnet_config.h  husarnet_crypto.cpp  husarnet_manager.cpp  husarnet_manager.h  identity.cpp  identity.h  ipaddress.cpp  ipaddress.h  ipaddress_parse.cpp  l2unwrapper.cpp  l2unwrapper.h  layer_interface.cpp  layer_interfaces.h  legacy_config.cpp  legacy_config.h  licensing.cpp  licensing.h  logmanager.cpp  logmanager.h  multicast_layer.cpp  multicast_layer.h  network_dev.cpp  (+26 more)
ports/: global_lock.cpp  sockets.h  util.cpp
tests/: CMakeLists.txt  copyright-checker.py  cppcheck.sh  integration.sh  secrets-tool.sh  test.sh  tests.cmake  unit.sh
tests/benchmark/: .gitignore  compose.yml  runner.sh
tests/common/: ipaddress_test.cpp  util_test.cpp
tests/core/: sqlite_configstorage.cpp
tests/esp32/: ci.sh
tests/husarnet/: config_storage_test.cpp  ipaddress_test.cpp  util_test.cpp
tests/integration/: .gitignore  all-tests.sh  docker.sh  fedora.sh  functional-basic.sh  install.sh  integration-test.sh  runner-wrapper.sh  runner.sh  secrets-decrypt.sh  secrets-encrypt.sh  secrets-tool.sh  ubuntu.sh  utils.sh
tests/integration/tests/: functional-basic.sh  hooks-base.sh  hooks-basic.sh  hooks-rw.sh  join-workflow.sh
tests/unit/: CMakeLists.txt  config_storage_test.cpp  ipaddress_test.cpp  unitmain.cpp  util_test.cpp
tests/windows/: integration-test.ps1
unix/: CMakeLists.txt  CMakePresets.json  arch_i386.cmake  daemon.cpp  http_handling.cpp  http_handling.h  license_management.cpp  license_management.h  licensing_unix.cpp  licensing_unix.h  main.cpp  service.cpp  service.h  service_helper_linux.cpp  smartcard_client.cpp  smartcard_client.h  tun.cpp  tun.h
unix/docker-misc/: Dockerfile  husarnet-docker.sh
unix/packaging-misc/: husarnet-completion.bash  husarnet-l2.service  husarnet-license-refresh.service  husarnet-license-refresh.timer  husarnet.service  post-install-script.sh  post-remove-script.sh
util/: bash-base.sh  build-all.sh  build-cli.sh  build-cmake.sh  build-docker.sh  build-prepare.sh  build-quick-cli.sh  build-quick-gdb.sh  build-quick.sh  build.sh  (+25 more)
windows/: CMakeLists.txt  arch_win32.cmake  daemon.cpp  main_windows.cpp  script.iss  service_helper_windows.cpp  service_windows.cpp  tap_windows.cpp  tap_windows.h
windows/installer/: build-installer.sh  installservice.bat  license.txt  script.iss  uninstallservice.bat
(+333 files in other folders)
